# rust

./: .gitignore  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile  package.json  rustfmt.toml
backend/src/: main.rs
backend/src/entities/: mod.rs  prelude.rs  weathers.rs
backend/src/utils/: helpers.rs  mod.rs  models.rs  scheduler.rs  weather.rs
backend/tests/: quick_dev.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx  env.d.ts  main.tsx  theme.ts
frontend/src/api/: fetchClient.ts  weatherApi.ts
frontend/src/components/: WeatherChart.tsx  WeatherDashboard.tsx  WeatherSummary.tsx
frontend/src/context/: WeatherContext.tsx
frontend/src/types/: weather.ts
